# webarkit-jsfeat-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  package-lock.json  package.json  run_docker.txt  test.cpp
emscripten/: bindings.cpp  webarkitJsfeat.cpp
examples/: equalize_histogram_video_example.html  gaussian_blur_video_example.html  grayscale.html  grayscale_debug.html  grayscale_example.html  grayscale_jsfeat_example.html  grayscale_m_example.html  grayscale_rgba_example.html  grayscale_ttm_example.html  grayscale_video_example.html  keypoint_t_test copy.html  keypoint_t_test.html  keypoints_test.html  matrix_t_test.html  orb_test.html  pyrdown.html  pyrdown_video_example.html  resample_video_example.html  sample_orb.html  sample_orb_mixed.html  sample_pyrdown.html  train_orb_example.html  yape06_detector_video_example.html  yape06_image_example.html  yape06_video_example.html
examples/js/: loader.js
js/: jsfeatCpp_post.api.js  post_bindings.api.js
src/: jsfeat.cpp  jsfeat.h
src/cache/: Cache.h  LRUCache.h
src/feature_detection/: detectors.h
src/imgproc/: imgproc.h  warp_affine.h
src/jslog/: jslog.h
src/keypoint_t/: keypoint_t.h
src/keypoints/: keypoints.h
src/keypoints_filter/: keypoints_filter.h
src/math/: math.h
src/matrix_base/: matrix_base.h
src/matrix_smart/: matrix_smart.h
src/matrix_t/: matrix_t.h
src/node_utils/: data_t.h  functions.h
src/orb/: bit_pattern_31.h  orb.h  rectify_patch.h
src/pyramid_t/: pyramid_t.h
src/types/: types.h
src/yape06/: yape06.h  yape06_utils.h
tests/: CMakeLists.txt
tests/src/: gtest_main.cc  types_test.cc
tools/: makem.js
